# 275_mini2

./: .gitignore  CMakeLists.txt  README.md  README.md.md
configs/: overlay.json
cpp_servers/common/: CMakeLists.txt  config.cpp  config.hpp  data.grpc.pb.cc  data.grpc.pb.h  data.pb.cc  data.pb.h  grpc_client.cpp  grpc_client.h  partition.cpp  partition.h  shared_memory.cpp  shared_memory.hpp  shm_writer.cpp  shm_writer.h
cpp_servers/node_A/: extraCMakeLists.txtextra.txt  grpc_server.cpp  grpc_server.h  main.cpp
cpp_servers/node_B/: CMakeLists.txt  extraCMakeLists.txtextra.txt  grpc_server.cpp  grpc_server.h  main.cpp  node_B.cpp
cpp_servers/node_C/: CMakeLists.txt  extraCMakeLists.txtextra.txt  grpc_server.cpp  grpc_server.h  main.cpp  node_c.cpp
cpp_servers/node_D/: extraCMakeLists.txtextra.txt  grpc_server.cpp  grpc_server.h  main.cpp
cpp_servers/node_E/: extraCMakeLists.txtextra.txt  grpc_server.cpp  grpc_server.h  main.cpp
grpc_definitions/: data.proto
proto/: data.grpc.pb.cc  data.grpc.pb.h  data.pb.cc  data.pb.h  data.proto
python_clients/: client.py  client_A.py  data_pb2.py  data_pb2_grpc.py  read_csv_and_send.py
scripts/: build_all.sh
